# superpandas

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  RELEASE_PROCESS.md  pyproject.toml  pytest.ini  requirements-docs.txt
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: docs.yml  main.yml  pr_checks.yml
docs/: cursor_evaluating_default_config_versus.md  langgraph_agent_usage.md
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  index.md  index.rst  installation.md  installation.rst  license.rst  sql_accessor.rst  usage.rst
docs/source/_static/: custom.css
docs/source/_templates/: layout.html
examples/: langgraph_agent_example.ipynb  sql_accessor_example.ipynb
scripts/: prepare_changelog.py  release.sh  update_changelog.py
superpandas/: __init__.py  _pandas_wrapper.py  config.py  langgraph_agent.py  llm_client.py  llm_clients.py  llms.py  pandasql.py  prompts.py  providers.py  superdataframe.py  superpandas.py  templates.py  utils.py
superpandas/utils/: __init__.py  codeparser.py  executors.py
tests/: conftest.py  data.pkl  test_config.py  test_langgraph_agent.py  test_llm_client.py  test_llm_integration.py  test_pandas_wrapper.py  test_pandasql.py  test_serialization.py  test_superdataframe.py  test_superpandas-v1.py  test_superpandas.py  titanic.csv  titanic.json  titanic.pkl  titanic.xlsx  titanic_sdf.csv  titanic_sdf_metadata.json
tutorials/: langgraph_agent_tutorial.ipynb
